tests/baselines/reference/overloadOnGenericClassAndNonGenericClass.errors.txt
overloadOnGenericClassAndNonGenericClass.ts(14,12): error TS2454: Variable 'xs' is used before being assigned.


==== overloadOnGenericClassAndNonGenericClass.ts (1 errors) ====
    class A { a; }
    class B { b; }
    class C { c; }
    class X<T> { x: T; }
    class X1 { x: string; }
    class X2 { x: string; }
    function f(a: X1): A;
    function f<T>(a: X<T>): B;
    function f(a): any {
    }
    
    var xs: X<string>;
    
    var t3 = f(xs);
               ~~
!!! error TS2454: Variable 'xs' is used before being assigned.
    var t3: A; // should not error
    